--- a/src/Component/HeroSection.css
+++ b/src/Component/HeroSection.css
@@ -2,4 +2,13 @@
     width: 100%;
     height: 100vh;
     background: lightpink;
+    position: relative;
+
+}
+.video-section {
+    position: absolute;
+    top: 15vh;
+    left: 0;
+
+
 }
