--- a/src/Component/Navbar.css
+++ b/src/Component/Navbar.css
@@ -8,6 +8,7 @@
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
+    z-index: 99;
 }
 .pony-logo {
     width: 8%;
