--- a/src/page/SearchDetails.css
+++ b/src/page/SearchDetails.css
@@ -1,6 +1,19 @@
 .search-details-container {
+    width: 100%;
+    height: 100vh;
+    background: lightpink;
+    position: relative;
+
+}
+.search-details-section {
     position: absolute;
-    top:500px;
-    left:0px;
-    background: lightseagreen;
+    top: 15vh;
+    left: 0;
+    width: 100%;
+    height: 85vh;
+    padding: 2em;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
 }
