--- a/src/Component/Navbar.css
+++ b/src/Component/Navbar.css
@@ -9,6 +9,7 @@
     justify-content: space-around;
     align-items: center;
     z-index: 99;
+    background: lightpink;
 }
 .pony-logo {
     width: 8%;
