--- a/src/page/SearchDetails.css
+++ b/src/page/SearchDetails.css
@@ -6,11 +6,12 @@
 
 }
 .search-details-section {
-    position: absolute;
+    background: lightpink;
+    position: absolute;/*it is absolute, there it comes out of the flow,
+    therefore the container above has nothing in it.*/
     top: 15vh;
     left: 0;
     width: 100%;
-    height: 85vh;
     padding: 2em;
     display: flex;
     flex-direction: column;
