--- a/src/Component/PonyDetails.css
+++ b/src/Component/PonyDetails.css
@@ -56,3 +56,10 @@
 .pony-kind {
     margin-left: 1em;
 }
+.video-btn {
+    background: lightgrey;
+    padding: 0.25em 0.5em;
+    border: none;
+    box-shadow: 5px 5px 5px rgba(0,0,0,0.5);
+    border-radius: 6px;
+}
