--- a/src/Component/CardSection.css
+++ b/src/Component/CardSection.css
@@ -1,6 +1,7 @@
 .card-section-container {
     width: 100%;
-    background: lightpink;
+    background: rgb(238,174,202);
+    background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
     height: 600px;
     display: flex;
     flex-direction: column;
