--- a/src/Component/Navbar.css
+++ b/src/Component/Navbar.css
@@ -9,8 +9,8 @@
     justify-content: space-around;
     align-items: center;
     z-index: 99;
-    background: lightpink;
-}
+    background: rgb(238,174,202);
+   }
 .logo-link {
     width: 8%;
 }
