--- a/src/page/SearchDetails.css
+++ b/src/page/SearchDetails.css
@@ -1,6 +1,6 @@
 .search-details-container {
     width: 100%;
-    height: 100vh;
+    min-height: 90vh;/*see below comments, this is min-height, so that it grows as the content grows*/
     background: rgb(238,174,202);
     background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
     position: relative;
@@ -9,11 +9,12 @@
 .search-details-section {
     background: rgb(238,174,202);
     background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
-
-    position: absolute;/*it is absolute, there it comes out of the flow,
-    therefore the container above has nothing in it.*/
-    top: 15vh;
-    left: 0;
+    /*below is finally not used, because nav should be just sticky and the rest page is 90vh*/
+    /*old comment see below*/
+    /*position: absolute;!*it is absolute, there it comes out of the flow,*/
+    /*therefore the container above has nothing in it.*!*/
+    /*top: 15vh;*/
+    /*left: 0;*/
     width: 100%;
     padding: 2em;
     display: flex;
