--- a/src/Component/PonyDetails.css
+++ b/src/Component/PonyDetails.css
@@ -1,14 +1,14 @@
 .pony-details-container {
     width: 100%;
-    height: 100vh;
+    height: 90vh;
     background: lightpink;
     position: relative;
 
 }
 .pony-details-section {
-    position: absolute;
-    top: 15vh;
-    left: 0;
+    /*position: absolute;*/
+    /*top: 15vh;*/
+    /*left: 0;*/
     width: 100%;
     padding: 2em;
     display: flex;
