--- a/src/Component/PonyDetails.css
+++ b/src/Component/PonyDetails.css
@@ -1,7 +1,8 @@
 .pony-details-container {
     width: 100%;
     height: 90vh;
-    background: lightpink;
+    background: rgb(238,174,202);
+    background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
     position: relative;
 
 }
