--- a/src/App.css
+++ b/src/App.css
@@ -4,5 +4,6 @@
     margin: 0;
     padding:0;
     box-sizing: border-box;
-    font-family: 'Architects Daughter', cursive;
+    /*font-family: 'Architects Daughter', cursive;*/
+    font-family: 'Lato', sans-serif
 }
